proj2/test/test_11811905_8.out
Error type 5 at Line 4: unmatching type on both sides of assignment
Error type 8 at Line 10: incompatiable return type
