proj2/test/test_11811905_8.spl
int g1;

int func(int p1, float p2) {
    g1 = 2.0;
    return 0; 
}

int test_11811806_8() {
    float v1 = 1.0;
    return func(g1, v1) + 2.0;
} 